@@ -1,6 +1,7 @@
 package de.tudresden.inf.st.mathgrass.api;
 
-import de.tudresden.inf.st.mathgrass.api.feedback.evaluator.MessageBrokerConn;
+import com.github.dockerjava.api.DockerClient;
+import com.github.dockerjava.core.DockerClientBuilder;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.springframework.boot.SpringApplication;
@@ -15,56 +16,50 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.servlet.config.annotation.EnableWebMvc;
 import org.springframework.web.servlet.view.InternalResourceViewResolver;
 
-import java.util.Arrays;
+import java.util.List;
 
 @SpringBootApplication
 @EnableWebMvc
 public class MathgrassServerApplication {
-	/**
-	 * Logger.
-	 */
-	private static final Logger logger = LogManager.getLogger(MathgrassServerApplication.class);
+    /**
+     * Logger.
+     */
+    private static final Logger logger = LogManager.getLogger(MathgrassServerApplication.class);
 
-	public static void main(String[] args) {
-		// run spring application
-		SpringApplication.run(MathgrassServerApplication.class, args);
-		logger.info("Spring application started!");
+    public static void main(String[] args) {
+        // run spring application
+        SpringApplication.run(MathgrassServerApplication.class, args);
+        logger.info("Spring application started!");
 
-		// instantiate connection for communication with evaluator message broker
-		MessageBrokerConn brokerConn = MessageBrokerConn.getInstance();
-		try {
-			brokerConn.connect();
-			logger.info("Connection to message broker established!");
-		} catch (Exception e) {
-			logger.error("No message queue available. Aborting...");
+    }
 
-			// TODO - shutdown application more gracefully
-			System.exit(0);
-		}
-	}
+    @Bean
+    public InternalResourceViewResolver defaultViewResolver() {
+        return new InternalResourceViewResolver();
+    }
 
-	@Bean
-	public InternalResourceViewResolver defaultViewResolver() {
-		return new InternalResourceViewResolver();
-	}
+    @Bean
+    public DockerClient dockerClient() {
+        return DockerClientBuilder.getInstance().build();
+    }
 
-	@EnableWebSecurity
-	public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
-		@Override
-		protected void configure(HttpSecurity http) throws Exception {
-			http.cors().and().csrf().disable();
-		}
+    @EnableWebSecurity
+    public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
+        @Override
+        protected void configure(HttpSecurity http) throws Exception {
+            http.cors().and().csrf().disable();
+        }
 
-		@Bean
-		CorsConfigurationSource corsConfigurationSource() {
-			UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-			CorsConfiguration corsConfiguration = new CorsConfiguration();
-			corsConfiguration.setAllowedOrigins(Arrays.asList("*"));
-			corsConfiguration.setAllowedMethods(Arrays.asList("*"));
-			corsConfiguration.setAllowedHeaders(Arrays.asList("*"));
-			corsConfiguration.setAllowCredentials(false);
-			source.registerCorsConfiguration("/**", corsConfiguration);
-			return source;
-		}
-	}
+        @Bean
+        CorsConfigurationSource corsConfigurationSource() {
+            UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+            CorsConfiguration corsConfiguration = new CorsConfiguration();
+            corsConfiguration.setAllowedOrigins(List.of("*"));
+            corsConfiguration.setAllowedMethods(List.of("*"));
+            corsConfiguration.setAllowedHeaders(List.of("*"));
+            corsConfiguration.setAllowCredentials(false);
+            source.registerCorsConfiguration("/**", corsConfiguration);
+            return source;
+        }
+    }
 }
